src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Call_End_Time__c</fullName>
        <label>Call End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_ID__c</fullName>
        <description>Call Id from Five9 reports</description>
        <label>Call ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Start_Time__c</fullName>
        <label>Call Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Day_of_Week__c</fullName>
        <formula>CASE(
  MOD( ActivityDate  - DATE(1900, 1, 8), 7 ),
  0, &quot;1 Monday&quot;,
  1, &quot;2 Tuesday&quot;,
  2, &quot;3 Wednesday&quot;,
  3, &quot;4 Thursday&quot;,
  4, &quot;5 Friday&quot;,
  5, &quot;6 Saturday&quot;, 
  &quot;7 Sunday&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9ANI__c</fullName>
        <label>Five9 ANI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9AgentExtension__c</fullName>
        <label>Five9 Agent Extension</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9AgentName__c</fullName>
        <label>Five9 Agent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Agent__c</fullName>
        <label>Five9 Agent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallType__c</fullName>
        <label>Five9 Call Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackCampaignId__c</fullName>
        <label>Five9CallbackCampaignId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackCampaignName__c</fullName>
        <label>Five9CallbackCampaignName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackId__c</fullName>
        <label>Five9CallbackId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackNumber__c</fullName>
        <label>Five9CallbackNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Campaign__c</fullName>
        <label>Five9 Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Cost__c</fullName>
        <label>Five9 Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Five9__Five9DNIS__c</fullName>
        <label>Five9 DNIS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9HandleTime__c</fullName>
        <label>Five9 Handle Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9SessionId__c</fullName>
        <label>Five9 Session Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9WrapTime__c</fullName>
        <label>Five9 After Call Work Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hour_of_Day__c</fullName>
        <formula>VALUE( MID( TEXT(CreatedDate), 12, 2 ) ) - 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>used to determine the Time of Day (Hr) based off of the created date.</inlineHelpText>
        <label>Hour of Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recording__c</fullName>
        <label>Recording</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_ID__c</fullName>
        <label>Salesforce ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Activities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>